--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.20.12",
+    "gatsby-plugin-modal-routing": "^1.1.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "jquery": "^3.5.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.12.0",
+    "react-draggable": "^4.3.1",
+    "react-responsive-modal": "^5.0.2",
+    "react-scrollspy": "^3.4.2",
+    "rebootstrap": "0.0.5"
   },
   "devDependencies": {
     "prettier": "2.0.4"
